--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ChannelMessaging</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_channel_list">Channel List</string>
+    <string name="title_activity_channel">ChannelActivity</string>
 </resources>
